deployment_os.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: brokered-product
  labels:
    app: brokered-product
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brokered-product
  namespace: brokered-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brokered-product
  template:
    metadata:
      labels:
        app: brokered-product
    spec:
      serviceAccountName: brokered-product
      volumes:
          - name: brokered-product
            configMap:
              name: brokered-product
              items:
              - key: application.properties
                path: application.properties
      containers:
        - name: brokered-product
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "900Mi"
              cpu: "2000m"
          volumeMounts:
            - name: brokered-product
              mountPath: /brokered-product/configmap
          image: brokered-product:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: brokered-product
  namespace: brokered-product
  labels:
    app: brokered-product
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: brokered-product
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brokered-product
  namespace: brokered-product
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brokered-product
                port:
                  number: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: brokered-product
  labels:
    app: brokered-product
  namespace: brokered-product
  annotations:
    haproxy.router.openshift.io/disable_cookies: 'true'
spec:
  path: /
  to:
    kind: Service
    name: brokered-product
  port:
    targetPort: 8080
  tls:
    termination: edge
